<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/addBtn"
        android:layout_marginTop="130dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addBtn" />
    
    <Button
        android:id="@+id/viewBtn"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewBtn" />
    
    <TextView
        android:id="@+id/mainTv"
        android:layout_marginTop="165dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainTv"
        android:textSize="12sp"
        android:gravity="center" />

</LinearLayout>
